=== 0.4 ===
2011-04-27  Aki Sasaki  <aki@mozilla.com>

* mozharness/base/vcs/hgtool.py: Created softlink -> sourcetool.py.

* mozharness/base/vcs/sourcetool.py:
    Was able to test a successful |sourcetool.py repo|, as well as a |sourcetool.py -s shared_dir repo|.
    Created ability to change the default VCS by looking at the filename (softlink to hgtool.py and it'll use hg by default; softlink to gittool.py and it'll use git when we enable it. I also see potential svntool.py and cvstool.py at some point.)

* mozharness/base/vcs/sourcetool.py (SourceTool._pre_config_lock):
    Verified that self.config['vcs'] is set; else self.fatal()

* mozharness/base/vcs/sourcetool.py (SourceTool.source):
    Cleaned up old TODO comments

* mozharness/base/vcs/mercurial.py:
    Worked through the various scenarios in sourcetool.py; fixing bugs.

2011-04-26  Aki Sasaki  <aki@mozilla.com>

* scripts/sourcetool.py: Moved from scripts/hgtool.py.

* test/test_log.py (TestLog.test_console_log): Removed method.
    Coverage didn't change at all (console logging is tested in test_script.py) but we removed a spurious line of output from unit.sh.

* mozharness/base/log.py (LogMixin.warn): Removed method.
    Also removed references to it.

* mozharness/base/script.py (ShellMixin.get_output_from_command):
    fixed the NamedTemporaryFile issue between 2.5 and 2.6, by allowing you to name your own tmpfile if you want to munge the contents later.

* mozharness/base/script.py (BaseScript):
    Pulled all os and shell methods out to mixins.

* mozharness/base/vcs/mercurial.py (MercurialVCS): Added class.
    This will hopefully be a standalone object that takes the baseScript log_obj and perhaps config, but will allow for multiple VCS objects per BaseScript.
    First pass: changed standalone functions to a MercurialVCS object.

2011-04-25  Aki Sasaki  <aki@mozilla.com>

* mozharness/base/log.py (BaseLogger.log_message): Renamed from log() to be compatible with LogMixin.
