@@ -1,0 +1,2 @@
+test/           : non-network-dependent unit tests
+test/networked/ : network-dependent unit tests.
